src/objects/P360_Request__c.object
<CustomObject>
    <description>Project 360 - This custom object stores all request records for Project 360 application</description>
    <fields>
        <fullName>Accomplishments__c</fullName>
        <description>Pulse Accomplishments</description>
        <inlineHelpText>Accomplishments from the latest pulse</inlineHelpText>
        <label>Accomplishments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ApplicationText__c</fullName>
        <description>A text-only field that captures the application name</description>
        <inlineHelpText>Enter the application name pertaining to this request</inlineHelpText>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRGApproved__c</fullName>
        <description>Determines if this has gone through BRG approvals</description>
        <inlineHelpText>If this requires a BRG Approval, has this been approved (Yes or No)</inlineHelpText>
        <label>BRG Approved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Value__c</fullName>
        <description>Formula field that calculates an overall &apos;business value&apos; score depending on the type of answers selected by the requestor</description>
        <formula>/* See &quot;Request Settings&quot; custom object and &quot;Request Settings&quot; custom field on Request object to understand score calculations */


(( ExecutivePoints__c
+ IF ( ISPICKVAL (ResultOfFederalMandate__c,&apos;Yes&apos;), RequestSetting__r.Q1_Score__c, 0)
+ IF ( ISPICKVAL (DeptLeadershipSupportBudget__c, &apos;Yes&apos;), RequestSetting__r.Q2_Score__c, 0)
+ IF ( ISPICKVAL (CurrentCostInformation__c, &apos;Yes&apos;), RequestSetting__r.Q3_Score__c, 0)
+ ScoreNumberOfUsersImpacted__c
+ ScoreTypeOfUsersImpacted__c
+ ScoreImplementationBenefits__c) / RequestSetting__r.MaxScore__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Costs__c</fullName>
        <description>Provided by the Triage team after evaluation of the request</description>
        <inlineHelpText>Provided by the Triage team after evaluation of the request</inlineHelpText>
        <label>Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentCostInformation__c</fullName>
        <description>Do you have any cost information at this time?</description>
        <inlineHelpText>Do you have any cost information at this time?</inlineHelpText>
        <label>Any current cost information?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeptLeadershipSupportBudget__c</fullName>
        <description>Is your department leadership in support of the project and willing to budget for it?</description>
        <inlineHelpText>Is your department leadership in support of the project and willing to budget for it?</inlineHelpText>
        <label>Management Support?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DescriptionOfMandate__c</fullName>
        <description>If yes to the previous question (Result of Federal Mandate?), provide a description of the mandate.</description>
        <inlineHelpText>If yes to the previous question (Result of Federal Mandate?), provide a description of the mandate.</inlineHelpText>
        <label>Description of Mandate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Please provide a short description of this request (New or Enhancement)</description>
        <inlineHelpText>Please provide a short description of this request (New or Enhancement)</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Dependent picklist to the Office/Portfolio Field.</description>
        <inlineHelpText>Use this field to select the Division that is managing the request.</inlineHelpText>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Office_Portfolio__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Application Systems Development Division</fullName>
                </value>
                <value>
                    <fullName>BAF - Staff Support Division</fullName>
                </value>
                <value>
                    <fullName>BAI - Information Technology Division</fullName>
                </value>
                <value>
                    <fullName>BAS - Resource Management Division</fullName>
                </value>
                <value>
                    <fullName>BBA - Appropriated Accounts Budget Division</fullName>
                </value>
                <value>
                    <fullName>BBB - Budget Formulation Division</fullName>
                </value>
                <value>
                    <fullName>BBC - Budget Control, Oversight, and Formulation Division</fullName>
                </value>
                <value>
                    <fullName>BBF - FAS Budget Division</fullName>
                </value>
                <value>
                    <fullName>BBI - Strategic Planning &amp; Performance Measurement Division</fullName>
                </value>
                <value>
                    <fullName>BBO - Budget Control &amp; Oversight Division</fullName>
                </value>
                <value>
                    <fullName>BBP - PBS Budget Division</fullName>
                </value>
                <value>
                    <fullName>BBS - Staff Accounts Division</fullName>
                </value>
                <value>
                    <fullName>BBT - TTS Budget Division</fullName>
                </value>
                <value>
                    <fullName>BBW - WCF Budget Division</fullName>
                </value>
                <value>
                    <fullName>BCA - Financial Policy &amp; Operations Division</fullName>
                </value>
                <value>
                    <fullName>BCB - Internal Control Division</fullName>
                </value>
                <value>
                    <fullName>BCC - Financial Reporting Division</fullName>
                </value>
                <value>
                    <fullName>BCE - Financial &amp; Payroll Services Division</fullName>
                </value>
                <value>
                    <fullName>BCF - Financial Services Division</fullName>
                </value>
                <value>
                    <fullName>BCP - PBS Financial Operations Division</fullName>
                </value>
                <value>
                    <fullName>BGA - Accounting and Financial Reporting Division</fullName>
                </value>
                <value>
                    <fullName>BGC - Consolidated Financial Services Division</fullName>
                </value>
                <value>
                    <fullName>BGF - FAS Financial Services Division</fullName>
                </value>
                <value>
                    <fullName>BGI - Internal Controls Division</fullName>
                </value>
                <value>
                    <fullName>BGN - Financial Policy Division</fullName>
                </value>
                <value>
                    <fullName>BGP - PBS Financial Services Division</fullName>
                </value>
                <value>
                    <fullName>BIA - Financial Information Management Division</fullName>
                </value>
                <value>
                    <fullName>BIB - Analytics &amp; Enterprise Reporting Division</fullName>
                </value>
                <value>
                    <fullName>BIC - Data Delivery and Management Division</fullName>
                </value>
                <value>
                    <fullName>BID - PBS Analytics Division</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EBCHelp__c</fullName>
        <description>This help text is used on the Record Update quick action. It will be hidden from page layouts and will be read-only.</description>
        <label>Help</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EBC_Title__c</fullName>
        <description>Field to capture the EBC title and map it to the EBC on conversion from Request to EBC</description>
        <inlineHelpText>Please provide a title for the EBC.</inlineHelpText>
        <label>EBC Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnhancementRequestCategoryOther__c</fullName>
        <description>If the Enhancement request category is OTHER, this input field is used to record the value</description>
        <inlineHelpText>If the Enhancement request category is OTHER, this input field is used to record the value</inlineHelpText>
        <label>Enhancement Request Category (other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EnhancementRequestCategory__c</fullName>
        <description>What category does this enhancement request apply to?</description>
        <inlineHelpText>What category does this enhancement request apply to?</inlineHelpText>
        <label>Enhancement Request Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>HR Services</fullName>
                </value>
                <value>
                    <fullName>Other Staff Office (OAS, OGC, etc.)</fullName>
                </value>
                <value>
                    <fullName>Customer Relationship Management</fullName>
                </value>
                <value>
                    <fullName>Data/Workflow Automation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EstimatedCosts__c</fullName>
        <description>Is yes, to the previous question (Current Cost Information), provide the estimated costs.</description>
        <inlineHelpText>Is yes, to the previous question (Current Cost Information), provide the estimated costs.</inlineHelpText>
        <label>Estimated Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ExecutiveBusinessCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Business Case</label>
        <referenceTo>Executive_Business_Case__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExecutivePoints__c</fullName>
        <inlineHelpText>Enter a number for this request to adjust its business value scoring. Note: value can be positive or negative.</inlineHelpText>
        <label>Executive Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HowDoYouAccomplishThisTaskToday__c</fullName>
        <description>Please describe how you accomplish this task today (if applicable).</description>
        <inlineHelpText>Please describe how you accomplish this task today (if applicable).</inlineHelpText>
        <label>How do you accomplish this task today?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ImplementationBenefitsOther__c</fullName>
        <description>If Benefits of Implementation is OTHER, this input field is used to record value</description>
        <inlineHelpText>If Benefits of Implementation is OTHER, this input field is used to record value</inlineHelpText>
        <label>Implementation Benefits (other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImplementationBenefits__c</fullName>
        <description>What are the benefits of implementation?</description>
        <inlineHelpText>What are the benefits of implementation?</inlineHelpText>
        <label>Implementation Benefits</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reduce service calls/emails or service tickets</fullName>
                </value>
                <value>
                    <fullName>Cost reduction</fullName>
                </value>
                <value>
                    <fullName>Eliminate manual or legacy business processes</fullName>
                </value>
                <value>
                    <fullName>Increase employee productivity and/or engagement</fullName>
                </value>
                <value>
                    <fullName>Increase revenue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InputChannel__c</fullName>
        <inlineHelpText>Source of this request</inlineHelpText>
        <label>Input Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Data Load</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IsConverted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not this request is converted into a project</inlineHelpText>
        <label>Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issues__c</fullName>
        <description>Pulse Issues</description>
        <inlineHelpText>Issues from the latest pulse</inlineHelpText>
        <label>Issues</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LevelOfEffort__c</fullName>
        <description>What is the level of effort for this request?</description>
        <inlineHelpText>Please describe the level of effort to complete this request as either High, Medium, or Low</inlineHelpText>
        <label>Level of Effort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ManagementContactInfo__c</fullName>
        <description>This field holds the contact information for the question  Does your management support this request?</description>
        <label>Management Contact Info</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewOrExistingProject__c</fullName>
        <inlineHelpText>Please choose &apos;Add to Existing Project&apos; if a Corporate IT Service project already exists</inlineHelpText>
        <label>New or Existing Project?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AddToExistingProject</fullName>
                </value>
                <value>
                    <fullName>CreateNewProject</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberOfUsersImpacted__c</fullName>
        <description>How many users are impacted by the implementation of this request?</description>
        <inlineHelpText>How many users are impacted by the implementation of this request?</inlineHelpText>
        <label>Number of users impacted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-100</fullName>
                </value>
                <value>
                    <fullName>101-5000</fullName>
                </value>
                <value>
                    <fullName>5000+</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office_Portfolio__c</fullName>
        <inlineHelpText>Use this field to select the Office/Portfolio that is managing the request.</inlineHelpText>
        <label>Office / Portfolio</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>RequestorSSO__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AC - Office of the GSA Chief of Staff</fullName>
                </value>
                <value>
                    <fullName>AG - Office of the Associate Administrator</fullName>
                </value>
                <value>
                    <fullName>AKA - EEO Program Division</fullName>
                </value>
                <value>
                    <fullName>AKB - Civil Rights Programs Division</fullName>
                </value>
                <value>
                    <fullName>AKE – OCR External Programs Division</fullName>
                </value>
                <value>
                    <fullName>AKN – OCR EEO Program Division</fullName>
                </value>
                <value>
                    <fullName>AKR – OCR Regional Operations Division</fullName>
                </value>
                <value>
                    <fullName>BA - OCFO Staff Offices Financial Services</fullName>
                </value>
                <value>
                    <fullName>BB - OCFO Office of Budget</fullName>
                </value>
                <value>
                    <fullName>BC - OCFO Office of Financial Policy &amp; Operations</fullName>
                </value>
                <value>
                    <fullName>BF - OCFO Office of FAS Financial Services</fullName>
                </value>
                <value>
                    <fullName>BG - Office of Financial Management</fullName>
                </value>
                <value>
                    <fullName>BI - Office of Financial Information &amp; Data Analytics</fullName>
                </value>
                <value>
                    <fullName>B - OCFO Front Office</fullName>
                </value>
                <value>
                    <fullName>BP - OCFO Office of PBS Financial Services</fullName>
                </value>
                <value>
                    <fullName>BR - Office of Regional Financial Services</fullName>
                </value>
                <value>
                    <fullName>CA - Office of Account Management</fullName>
                </value>
                <value>
                    <fullName>CN - Office of Mgmt &amp; Performance Improvement</fullName>
                </value>
                <value>
                    <fullName>CP - Office of Human Resources Services</fullName>
                </value>
                <value>
                    <fullName>CS - Office of HR Strategy &amp; Services</fullName>
                </value>
                <value>
                    <fullName>CSS - Office of HR Services</fullName>
                </value>
                <value>
                    <fullName>D1A - Operations &amp; Plans Division</fullName>
                </value>
                <value>
                    <fullName>D1E - Eastern Regions Division</fullName>
                </value>
                <value>
                    <fullName>D1H - Physical Security Division</fullName>
                </value>
                <value>
                    <fullName>D1P - Policy &amp; Performance Division</fullName>
                </value>
                <value>
                    <fullName>D1R - Resilience &amp; Interagency Programs Division</fullName>
                </value>
                <value>
                    <fullName>D1W - Western Regions Division</fullName>
                </value>
                <value>
                    <fullName>DA - OMA Northeast Regions Division</fullName>
                </value>
                <value>
                    <fullName>DB - OMA Southeast Regions Division</fullName>
                </value>
                <value>
                    <fullName>DC - OMA Midwest Regions Division</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProjectLink__c</fullName>
        <description>Link of the converted project</description>
        <formula>IF ( ISBLANK(Project__c), &apos;&apos;,  LEFT($Api.Partner_Server_URL_390, FIND(&apos;/services&apos;, $Api.Partner_Server_URL_390) ) &amp; Project__r.Id)</formula>
        <label>Project Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectSponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose a Project Sponsor</inlineHelpText>
        <label>Project Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If approved, a project will be created from this request</inlineHelpText>
        <label>Project</label>
        <referenceTo>GPM_Project__c</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <inlineHelpText>Use this field to select the Region that this request is being managed out of</inlineHelpText>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Central Office</fullName>
                </value>
                <value>
                    <fullName>Region 1</fullName>
                </value>
                <value>
                    <fullName>Region 2</fullName>
                </value>
                <value>
                    <fullName>Region 3</fullName>
                </value>
                <value>
                    <fullName>Region 4</fullName>
                </value>
                <value>
                    <fullName>Region 5</fullName>
                </value>
                <value>
                    <fullName>Region 6</fullName>
                </value>
                <value>
                    <fullName>Region 7</fullName>
                </value>
                <value>
                    <fullName>Region 8</fullName>
                </value>
                <value>
                    <fullName>Region 9</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
                <value>
                    <fullName>National Capital Region</fullName>
                </value>
                <value>
                    <fullName>Close</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Setting</label>
        <referenceTo>P360_RequestSetting__c</referenceTo>
        <relationshipLabel>Requests</relationshipLabel>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <description>This field is being used in email template and is hidden from all users from page layouts, profiles, and reports.</description>
        <formula>IF ( CONTAINS(RecordType.Name, &apos;New Application&apos;), &apos;New Application&apos; , 
     (IF ( CONTAINS(RecordType.Name, &apos;Enhancement&apos;), &apos;Enhancement&apos;, &apos;Request&apos;)))</formula>
        <label>Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestedEnhancementCompletionDate__c</fullName>
        <description>Requested enhancement completion date?</description>
        <inlineHelpText>Requested enhancement completion date?</inlineHelpText>
        <label>Requested Enhancement Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestedSolutionCompletionDate__c</fullName>
        <description>The requested solution completion date</description>
        <inlineHelpText>The requested solution completion date</inlineHelpText>
        <label>Requested Solution Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestorEmail__c</fullName>
        <description>Requestor email address</description>
        <inlineHelpText>Please enter a valid email address (example@gsa.gov)</inlineHelpText>
        <label>Requestor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RequestorName__c</fullName>
        <description>Requestor Name</description>
        <inlineHelpText>Requestor Full Name (i.e. Elizabeth Sanders)</inlineHelpText>
        <label>Requestor Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestorPhone__c</fullName>
        <description>Requestor Phone Number</description>
        <inlineHelpText>Please enter a valid phone number to contact</inlineHelpText>
        <label>Requestor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RequestorSSO__c</fullName>
        <description>Requestor Service or Staff Office</description>
        <inlineHelpText>Requestor Service or Staff Office (i.e. OCFO, GSA IT(OCIO, OCM)</inlineHelpText>
        <label>Requestor Service or Staff Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AK - Office of Civil Rights</fullName>
                </value>
                <value>
                    <fullName>A - Office of the Administrator</fullName>
                </value>
                <value>
                    <fullName>B - Office of the Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>C - Office of Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>D - Office of Mission Assurance</fullName>
                </value>
                <value>
                    <fullName>E - Office of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>G - Civilian Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>H - Office of Administrative Services</fullName>
                </value>
                <value>
                    <fullName>I - Office of the GSA IT</fullName>
                </value>
                <value>
                    <fullName>J - Office of the Inspector General</fullName>
                </value>
                <value>
                    <fullName>L - Office of the General Counsel</fullName>
                </value>
                <value>
                    <fullName>M - Office of Governmentwide Policy</fullName>
                </value>
                <value>
                    <fullName>P - Public Buildings Service</fullName>
                </value>
                <value>
                    <fullName>Q - Federal Acquisition Service</fullName>
                </value>
                <value>
                    <fullName>S - Office of Congressional &amp; Intergovernmental Affairs</fullName>
                </value>
                <value>
                    <fullName>T - Technology Transformation Service</fullName>
                </value>
                <value>
                    <fullName>USDA – Office of the Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>Z - Office of Strategic Communications</fullName>
                </value>
                <value>
                    <fullName>External Agency</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>FAS</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>GSA IT (OCIO)</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>OAS</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>OCFO</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>OCM</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>OCR</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>OCSIT</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>OGC</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>OGP</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>OHRM</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>OIG</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResultOfFederalMandate__c</fullName>
        <description>Is this request the result of a Federal Mandate?</description>
        <inlineHelpText>Is this request the result of a Federal Mandate?</inlineHelpText>
        <label>Result of a Federal Mandate?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ScoreImplementationBenefits__c</fullName>
        <description>Formula field for calculating score for Implementation Benefits field. Each selection adds 1 point</description>
        <formula>/* Depending on the selection in the Implementation Benefits field, assign a score from the Request Settings record */

IF ( INCLUDES( ImplementationBenefits__c , &apos;Reduce service calls/emails or service tickets&apos;), RequestSetting__r.Q5_Score__c, 0)
+ IF ( INCLUDES( ImplementationBenefits__c , &apos;Cost reduction&apos;), RequestSetting__r.Q5_Score__c, 0)
+ IF ( INCLUDES( ImplementationBenefits__c , &apos;Eliminate manual or legacy business processes&apos;), RequestSetting__r.Q5_Score__c, 0)
+ IF ( INCLUDES( ImplementationBenefits__c , &apos;Increase employee productivity and/or engagement&apos;), RequestSetting__r.Q5_Score__c, 0)
+ IF ( INCLUDES( ImplementationBenefits__c , &apos;Increase revenue&apos;), RequestSetting__r.Q5_Score__c, 0)
+ IF ( INCLUDES( ImplementationBenefits__c , &apos;Other&apos;), RequestSetting__r.Q5_Score__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Implementation Benefits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>